chandeliers-lus/tests/compile_fail/ui/tc/poly/rebind.stderr
error: Cannot satisfy constraint T = bool introduced here...
  --> tests/compile_fail/ui/tc/poly/rebind.rs:11:26
   |
11 |     let v = alternate(1, true); tel;
   |                          ^^^^
   |
note: ...because a previous bound already enforces T = int
  --> tests/compile_fail/ui/tc/poly/rebind.rs:11:23
   |
11 |     let v = alternate(1, true); tel;
   |                       ^
note: Unable to satisfy the generic bounds on T
  --> tests/compile_fail/ui/tc/poly/rebind.rs:3:20
   |
3  |     node alternate(x, y: T) returns (t: T);
   |                    ^^^^^^^^
